--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,10 @@
 
 html, body {
     width: 100%;
-    height:100%;
+    height: 100%;
     padding: 0;
-    margin:0;
-    font-size:16px;
+    margin: 0;
+    font-size:  16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -14,7 +14,8 @@ html, body {
 }
 
 img {
-    width:100%;
+    width: 100%;
+    border: 1px solid black;
 }
 
 header, main, footer {
@@ -80,7 +81,7 @@ nav a.active {
     width: 100%;
     height:100%;
     padding:5rem;
-    background-color:rgba(0,0,0,0.8);
+    background-color: black;
     transition: all 0.5s linear;
 }
 
